# docs/swagger/swagger.yaml
@@ -64,6 +64,12 @@ definitions:
     properties:
       error:
         $ref: '#/definitions/response.ErrorBody'
+      path:
+        example: /api/v1/auth/login
+        type: string
+      statusCode:
+        example: 400
+        type: integer
     type: object
   response.HealthResponse:
     properties:
